<resources>
    <string name="app_name">Family</string>

    <string name="toptitle">四维智家</string>
    <string name="tab_menu_home">home</string>
    <string name="tab_menu_mode">mode</string>
    <string name="tab_menu_safe">safe</string>
    <string name="tab_menu_mine">mine</string>

    <string name="home_data">环境数据</string>
    <string name="nothing">未填充</string>
    <string name="get_data">更新数据</string>
    <string name="celebreate">庆祝</string>
    <string name="home_controll">设备控制</string>
    <string name="home_controll_type">1.选择设备</string>
    <string name="home_work_type">2.选择工作方式</string>
    <string name="home_work_time">3.选择定时时间（0~60s）</string>
    <string name="seekbar_time">当前定时时间为0s</string>
    <string name="home_controll_btn">开始</string>
    <string name="Lack_of_control_data">请选择设备与工作模式</string>
</resources>
